bug: fix slimselect fields not showing selected in darkmode

--- a/src/admin/templates/clean/css/darkmode.css
+++ b/src/admin/templates/clean/css/darkmode.css
@@ -9,7 +9,7 @@
     ::-webkit-resizer { background-color: rgb(255 255 255 / 20%);}
 
     /* slimselect */
-    .ss-main .ss-multi-selected, .ss-main .ss-single-selected, .ss-content, .ss-search input, .ss-option, .ss-main {
+    .ss-main .ss-multi-selected, .ss-main .ss-single-selected, .ss-content, .ss-search input, .ss-option:not(.ss-selected), .ss-main {
         background-color: var(--bulma-body-background-color) !important;
         color: var(--bulma-body-color) !important;
     }
